Registro de usuario

--- a/web/cliente.xhtml
+++ b/web/cliente.xhtml
@@ -26,6 +26,12 @@
                     <p:inputText required="true" requiredMessage="CAMPO OBLIGATORIO"></p:inputText>
                <H5>Correo</H5>
                     <p:inputText required="true" requiredMessage="CAMPO OBLIGATORIO"></p:inputText>
+                     <H5>Contraseña</H5>
+                    <p:inputText required="true" requiredMessage="CAMPO OBLIGATORIO"></p:inputText>
+                    <H5>Tipo de Usuario</H5>
+                    <h:selectOneMenu >
+                        <f:selectItems value="#{beanCliente.listaTipoUsuario}"/>
+                       </h:selectOneMenu>
                     <h5>Direcciones</h5>
                      
                     <h6>Agregar direccion</h6>
